<resources>
    <string name="app_name">lekura</string>

    <string name="minimum_password">Minimum characters! 6.</string>
    <string name="auth_failed">Login failed, check your email and password or sign up</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Provide your registered Email to reset password.</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="hint_email">Email</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Download</string>
    <string name="action_play_next">GAme info</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
</resources>
